fix: overflow issue on portfolio

--- a/src/App.css
+++ b/src/App.css
@@ -616,3 +616,9 @@ textarea.form-control {
 .footer a {
   color: var(--primary-dark-grey);
 }
+
+.dropdown-appear-above-content {
+  position: relative;
+  z-index: 10000;
+  overflow: visible;
+}
